my landing page

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   <div class="footer">
     <div class="links">
       <a href="https://www.facebook.com/thedeskss/"><i class="fab fa-fw fa-facebook-f"></i></a>
-      <a href="https://www.instagram.com/_thedesk_/"><i class="fab fa-fw fa-github"></i></a>
+      <a href="https://github.com/Bast-i1"><i class="fab fa-fw fa-github"></i></a>
       <a href="https://twitter.com/BastienDuban"><i class="fab fa-fw fa-twitter"></i></a>
-      <a href="https://www.linkedin.com/company/thedesks/?viewAsMember=true"><i class="fab fa-fw fa-instagram"></i></a>
+      <a href="https://www.instagram.com/_thedesk_/"><i class="fab fa-fw fa-instagram"></i></a>
       <p>This website was coded with <i class="fas fa-heart"></i> at Le Wagon.</p>
     </div>
   </div>
